--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
     <h1>NUEVO TITULO</h1>
     <p>Este es un párrafo con información</p>
-    <h2>Título 2</h2>
+    <h2>eSTE ES OTRO NUEVO TITULO</h2>
     <p>Este es otro párrafo con información</p>
     <h3>Título 3</h3>
     <ul>
